Fixed missing border-radius

--- a/userChrome.css
+++ b/userChrome.css
@@ -13,7 +13,7 @@
 }
 
 .tabbrowser-tab[selected="true"] {
-  border-radius: .5em;
+  border-radius: .5em !important;
   background: linear-gradient(90deg, rgb(131, 58, 180) 0%, rgb(253, 29, 29) 50%, rgb(252, 176, 69) 100%);
 }
 
